--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -12,6 +12,7 @@
             <div class="logo">
                 <a href="#">Brayan Ortiz</a>
             </div>
+            <input type="checkbox">
             <nav class="nav">
                 <ul>
                     <li><a href="./Index.html">Inicio</a></li>
