--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -12,7 +12,11 @@
             <div class="logo">
                 <a href="#">Brayan Ortiz</a>
             </div>
-            <input type="checkbox">
+            <input type="checkbox" id="menu-toggle"/>
+            <label for="menu-toggle" class="menu-icon">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+
             <nav class="nav">
                 <ul>
                     <li><a href="./Index.html">Inicio</a></li>
