--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <div class="container-header">
        <header>
         <div class="logo">
-            <a href="#">Brayan Ortiz</a>
+            <a href="#">Brayan Orti</a>
         </div>
         <nav class="nav">
             <ul>
@@ -53,4 +53,5 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
     </footer>
+
 </html>
