--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -25,6 +25,7 @@
                     <li><a href="./curriculum.html">Curriculum</a></li>
                     <li><a href="./portafolio.html">Portafolio</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
+                    <link rel="stylesheet" href="">
                 </ul>
             </nav>
         </header>
