--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,12 @@
     <div class="container-header">
        <header>
         <div class="logo">
-            <a href="#">Brayan Orti</a>
+            <a href="#">Brayan Ortiz</a>
         </div>
+        <input type="checkbox" id="menu-toggle"/>
+            <label for="menu-toggle" class="menu-icon">
+                <i class="fa-solid fa-bars"></i>
+            </label>
         <nav class="nav">
             <ul>
                 <li><a href="./Index.html">Inicio</a></li>
